# wordle_helper

./: Cargo.toml  README.md
.github/workflows/: test.yml
data/: sample_dictionary.txt
src/: dictionary.rs  lib.rs  main.rs  simple.rs  txt.rs
src/testdata/: english.txt  japanese_pokemon.txt
