[package]
name = "wordle-helper"
version = "0.1.0"
description = "Help solving wordle question with CLI."
edition = "2021"
repository = "https://github.com/abekoh/wordle_helper"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
ansi_term = "^0.12.1"
num-format = "^0.4.0"
# use: https://github.com/mitsuhiko/dialoguer/pull/162
# TODO: fix version
dialoguer = { git = "https://github.com/craciuncezar/dialoguer", rev = "252a183fe07359c02bc8e165f53e735376069580", features = ["fuzzy-select"] }
reqwest = { version = "^0.11.9", features = ["blocking"] }

[[bin]]
name = "wordle-helper"
path = "src/bin/main.rs"
